package app.entities;

public enum ItemCondition {
    NEW,
    GOOD,
    USED,
    DAMAGED,
    UNUSABLE
}
