package app.entities;

public enum ItemStatus {
    OWNED,
    WISHLIST,
    BORROWED,
    LENT,
    MISSING,
    SOLD,
    DESTROYED
}
