@startuml
'https://plantuml.com/class-diagram



class ItemDAO {
}
class Item {
}
class User {
}
class UserDAO {
}
class Collection {
}
class CollectionDAO{
}
enum ItemCondition {
}
enum ItemStatus {
}

ItemDAO --> Item
Collection *-- Item
CollectionDAO --> Collection
UserDAO --> User
User o-- Collection




@enduml